# Shibei

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
crates/shibei-backup/: Cargo.toml
crates/shibei-backup/src/: lib.rs
crates/shibei-db/: Cargo.toml
crates/shibei-db/migrations/: 003_sync.sql  005_search_index.sql
crates/shibei-db/src/: comments.rs  folders.rs  highlights.rs  lib.rs  migration.rs  resources.rs  search.rs  sync_log.rs  tags.rs
crates/shibei-events/: Cargo.toml
crates/shibei-mobile-lock/: Cargo.toml
crates/shibei-mobile-lock/src/: lib.rs  pin.rs  throttle.rs  wrap.rs
crates/shibei-napi-codegen/: Cargo.toml
crates/shibei-napi-codegen/src/: main.rs  parse.rs  render_bindings.rs  render_dts.rs  render_shim.rs
crates/shibei-napi-macros/: Cargo.toml
crates/shibei-napi-macros/src/: lib.rs
crates/shibei-pair-decrypt/: Cargo.toml
crates/shibei-pair-decrypt/src/: main.rs
crates/shibei-pairing/: Cargo.toml
crates/shibei-pairing/src/: lib.rs
crates/shibei-storage/: Cargo.toml
crates/shibei-storage/src/: cache.rs  lib.rs  pdf_text.rs  plain_text.rs
crates/shibei-sync/: Cargo.toml
crates/shibei-sync/src/: credentials.rs  crypto.rs  encrypted_backend.rs  engine.rs  export.rs  keyring.rs  lib.rs  os_keystore.rs  pairing.rs  sync_state.rs
docs/: 2026-04-11-ux-checklist.md  2026-04-11-ux-review.md  2026-04-16-pdf-resize-lessons.md  harmony-dev-setup.md
docs/superpowers/plans/: 2026-04-01-anchor-enhancement.md  2026-04-01-navigation.md  2026-04-01-reading-annotation-enhancement.md  2026-04-01-region-selection.md  2026-04-02-code-review-fixes.md  2026-04-02-v1.2-deep-polish.md  2026-04-02-v1.2.1-tech-debt.md  2026-04-02-v1.3-s3-sync.md  2026-04-03-unified-data-events.md  2026-04-03-v1.3.1-e2ee.md  2026-04-04-v1.3.2-os-keystore.md  2026-04-04-v1.4-ux-polish.md  2026-04-04-v1.5-ux-enhancements.md  2026-04-06-v1.4-search.md  2026-04-06-v1.5-dark-mode.md  2026-04-06-v1.6-markdown-annotation.md  2026-04-06-v1.7-mcp-server.md  2026-04-07-sync-bugfix.md  2026-04-08-sync-restore-cascade-fixes.md  2026-04-09-extension-large-page-optimization.md  2026-04-09-extension-ux-improvements.md  2026-04-09-s3-snapshot-gzip.md  2026-04-09-v1.8-i18n.md  2026-04-11-fulltext-search.md  2026-04-11-ux-improvements.md  2026-04-12-v2.2-backup-restore.md  2026-04-15-v2.3-pdf-support.md  2026-04-16-ai-settings-mcp-autoconfig.md  2026-04-17-session-persistence.md  2026-04-17-ui-polish.md  2026-04-19-v2.4-pdf-zoom-autolaunch-summary.md  2026-04-20-harmony-phase0-verification.md  2026-04-21-phase1-pairing-qr.md  2026-04-21-phase2-skeleton.md  2026-04-22-phase3a-arkweb-reader.md  2026-04-22-phase3b-pdf-support.md  2026-04-22-phase4-lockscreen-huks.md  2026-04-23-harmony-i18n-keys.md  2026-04-23-harmony-i18n-theme.md
docs/superpowers/reports/: 2026-04-20-harmony-phase0-verification-report.md
docs/superpowers/specs/: 2026-03-31-phase3-clipping-research.md  2026-03-31-shibei-mvp-design.md  2026-03-31-shibei-mvp-plan.md  2026-03-31-shibei-roadmap.md  2026-04-01-anchor-enhancement-design.md  2026-04-01-navigation-design.md  2026-04-01-reading-annotation-enhancement-design.md  (+32 more)
extension/: build-singlefile.mjs  manifest.json  package-lock.json  package.json
extension/lib/: single-file-bundle.js
mcp/: package-lock.json  package.json
mcp/src/: client.ts  index.ts  types.ts
scripts/: build-harmony-napi.sh  ensure-mcp-bundle.mjs  smoke-sync-diff.sh  test-pairing-roundtrip.sh
shibei-harmony/: build-profile.json5  oh-package.json5
shibei-harmony/AppScope/: app.json5
shibei-harmony/entry/: build-profile.json5  oh-package.json5
src/: App.module.css  App.test.tsx  App.tsx  i18n.ts  main.tsx
src-harmony-napi/: Cargo.toml  annotator-mobile.js  build.rs
src-harmony-napi/src/: commands.rs  lib.rs  lock.rs  progress.rs  runtime.rs  s3_smoke.rs  secure_store.rs  shim.c  state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_selection_meta.sql  004_fix_tag_unique.sql  006_plain_text.sql  007_search_index_body.sql
src-tauri/src/: annotator.js  backup.rs  events.rs  lib.rs  main.rs  mhtml.rs  pdf_text.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: comments.rs  folders.rs  highlights.rs  migration.rs  mod.rs  resources.rs  search.rs  tags.rs
src-tauri/src/server/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/sync/: backend.rs  credentials.rs  device.rs  encrypted_backend.rs  engine.rs  export.rs  hlc.rs  keyring.rs  mod.rs  os_keystore.rs  pairing.rs  sync_log.rs  sync_state.rs
src/annotator/: annotator.ts  tsconfig.json
src/components/: AnnotationPanel.module.css  AnnotationPanel.test.tsx  AnnotationPanel.tsx  ContextMenu.module.css  ContextMenu.tsx  HighlightContextMenu.module.css  HighlightContextMenu.tsx  Layout.module.css  Layout.tsx  LockScreen.module.css  LockScreen.tsx  MarkdownContent.module.css  MarkdownContent.tsx  Modal.module.css  Modal.test.tsx  Modal.tsx  PDFReader.module.css  PDFReader.tsx  PreviewPanel.module.css  PreviewPanel.tsx  ReaderView.module.css  ReaderView.tsx  ResourceMeta.module.css  ResourceMeta.tsx  SelectionToolbar.module.css  SelectionToolbar.tsx  SettingsView.module.css  SettingsView.tsx  Skeleton.module.css  Skeleton.tsx  Spinner.module.css  SyncSettings.module.css  SyncSettings.tsx  SyncStatus.module.css  SyncStatus.tsx  TabBar.module.css  TabBar.test.tsx  TabBar.tsx  TrashList.module.css  TrashList.tsx
src/hooks/: useAnnotations.test.ts  useAnnotations.ts  useFlipPosition.test.tsx  useFlipPosition.ts  useFolders.test.ts  useFolders.ts  useResources.test.ts  useResources.ts  useSync.ts  useTags.test.ts  useTags.ts  useTheme.test.ts  useTheme.ts
src/lib/: autostart.ts  commands.ts  events.ts  importPdf.ts  pdfZoom.test.ts  pdfZoom.ts  sessionState.test.ts  sessionState.ts
src/styles/: global.css  variables.css
src/test/: setup.ts  tauriMock.ts
src/types/: i18next.d.ts  index.ts
(+145 files in other folders)
