[package]
name = "shibei"
version = "0.1.0"
description = "Personal read-only reference library"
authors = ["Ming Yin"]
edition = "2021"

[lib]
name = "shibei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
