[package]
name = "shibei"
version = "0.1.0"
description = "Personal read-only reference library"
authors = ["Ming Yin"]
edition = "2021"

[lib]
name = "shibei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
base64 = "0.22"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.27", features = ["bundled"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
async-trait = "0.1.89"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
scraper = "0.22"
flate2 = "1.1"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.1"
urlencoding = "2.1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"
