[package]
name = "shibei"
version = "0.1.0"
description = "Personal read-only reference library"
authors = ["Ming Yin"]
edition = "2021"

[lib]
name = "shibei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.27", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.1"
urlencoding = "2.1.3"
shibei-pairing = { path = "../crates/shibei-pairing" }
shibei-db = { path = "../crates/shibei-db" }
shibei-events = { path = "../crates/shibei-events" }
shibei-storage = { path = "../crates/shibei-storage" }
shibei-sync = { path = "../crates/shibei-sync" }
shibei-backup = { path = "../crates/shibei-backup" }

[dev-dependencies]
tempfile = "3"
shibei-db = { path = "../crates/shibei-db", features = ["test-support"] }
