[package]
name = "shibei-backup"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Shibei local backup/restore: zips DB + storage + manifest."

[lib]
name = "shibei_backup"

[dependencies]
shibei-db = { path = "../shibei-db" }
shibei-storage = { path = "../shibei-storage" }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
shibei-db = { path = "../shibei-db", features = ["test-support"] }
tempfile = "3"
