[package]
name = "shibei-pair-decrypt"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Developer CLI for decrypting Shibei pairing envelopes (round-trip testing)"

[[bin]]
name = "shibei-pair-decrypt"
path = "src/main.rs"

[dependencies]
shibei-pairing = { path = "../shibei-pairing" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
