[package]
name = "shibei-pairing"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "PIN-encrypted payload envelope for Shibei mobile device onboard (QR pairing)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
